@@ -51,8 +51,6 @@ private slots:
     void testStopLaunchProgressIfObscured();
     void testSettingButtonStateAndProgress();
     void testSettingButtonStateAndProgressWithInvalidValues();
-    void testSettingButtonStateWithUpdatingDesktopEntry_data();
-    void testSettingButtonStateWithUpdatingDesktopEntry();
     void testLaunchingMultipleTimes();
     void testTryingToLaunchSecondActionWhileLaunching();
 
